test/files/neg/t5923c.check
Test_2.scala:7: error: could not find implicit value for parameter iso: Iso[Test.Foo,L]
    val equiv = foo(Foo(23, "foo", true))
                   ^
one error found
